<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="title_hint">Enter a title for the crime.</string>
    <string name="title_label">Title</string>
    <string name="details_label">Details</string>
    <string name="solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="crime_time">Crime Time</string>
    <string name="crime_title_pressed"> %1$s pressed!</string>
    <string name="new_crime"> New crime</string>
    <string name="empty_list_crimes">Empty list crimes</string>
    <string name="add_crime">Add new crime</string>
    <string name="crime_suspect">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call suspect</string>
</resources>
