<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/crimePhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                />

            <ImageButton
                android:id="@+id/crimeCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_label"
                style="?android:listSeparatorTextViewStyle"
                />

            <EditText
                android:id="@+id/crimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <Button
        android:id="@+id/crimeDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Select Date"
        />

    <Button
        android:id="@+id/crimeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Select Time"
        />

    <CheckBox
        android:id="@+id/crimeSolved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solved_label"
        />

    <Button
        android:id="@+id/crimeSuspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect"
        />

    <Button
        android:id="@+id/crimeReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"
        />

</LinearLayout>
